hphp/hack/test/typecheck/inout/inout_pipe_expression.php.exp
File "inout_pipe_expression.php", line 8, characters 22-23:
You cannot use this syntax with `inout`. (Parsing[1002])
